# xdmcpd

./: AUTHORS  Makefile.am  README  autogen.sh  clean.sh  config.h.in  configure.ac
src/: Makefile.am  cookie.c  xdmcpd.c  xdmcpd.conf  xdmcpd.h
